--- a/README
+++ b/README
@@ -26,4 +26,4 @@ Example
 <%= show_rads_banner :skyscraper %>
 
 
-Copyright (c) 2008 [name of plugin creator], released under the MIT license
+Copyright (c) 2008 Gregory Ray, released under the MIT license
